fix(scroller): allow the main wrap to scroll

--- a/sandpack-react/src/styles/index.css
+++ b/sandpack-react/src/styles/index.css
@@ -141,10 +141,6 @@
   outline: 0;
 }
 
-.sp-cm.sp-pristine .cm-scroller {
-  overflow: hidden;
-}
-
 .sp-cm.sp-pristine:focus-within .cm-scroller {
   overflow: auto;
 }
